package com.ssm.proxy.dynamic;

/**
 * @author shaoshao
 * @version 1.0
 * @date 2022/5/23 20:15
 */
public interface ITeacherDao {

    void teach(); // 授课方法
    void sayHello(String name);
}
